--- a/index.html
+++ b/index.html
@@ -365,6 +365,18 @@
               </div>
             </div>
           </div>
+
+		<div class="col-md-4 d-flex ftco-animate">
+          	<div class="blog-entry">
+              <a href="https://github.com/Abhimanyusit/mini-python-code-editor.git" class="block-20 zoom-effect" style="background-image: url('images/code-compiler.png');">
+              </a>
+              <div class="text mt-3 float-right d-block">
+
+                <h3 class="heading"><a href="https://github.com/Abhimanyusit/mini-python-code-editor.git">Mini Python Code Editor</a></h3>
+                <p>A web-based mini Python code editor and runner. Write, edit, and execute Python code in your browser with real-time output, powered by Docker for secure code execution.</p>
+              </div>
+            </div>
+          </div>
 	</div>
 
 	<br>
