--- a/index.html
+++ b/index.html
@@ -343,16 +343,6 @@
       </div>
     </div>
 	<div class="row d-flex">
-		          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/Abhimanyusit/dodge-the-blocks.git" class="block-20 zoom-effect" style="background-image: url('images/pygame.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/Abhimanyusit/dodge-the-blocks.git">Dodge the block game using Python</a></h3>
-              </div>
-            </div>
-          </div>
 
 		<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
@@ -374,6 +364,18 @@
 
                 <h3 class="heading"><a href="https://github.com/Abhimanyusit/mini-python-code-editor.git">Mini Python Code Editor</a></h3>
                 <p>A web-based mini Python code editor and runner. Write, edit, and execute Python code in your browser with real-time output, powered by Docker for secure code execution.</p>
+              </div>
+            </div>
+          </div>
+
+		  		<div class="col-md-4 d-flex ftco-animate">
+          	<div class="blog-entry">
+              <a href="https://github.com/Abhimanyusit/todo_app.git" class="block-20 zoom-effect" style="background-image: url('images/todo_app.png');">
+              </a>
+              <div class="text mt-3 float-right d-block">
+
+                <h3 class="heading"><a href="https://github.com/Abhimanyusit/todo_app.git">TO-DO APP</a></h3>
+                <p>A full-stack web application built with Spring Boot, Thymeleaf, and MySQL. Features include adding, completing, and deleting tasks with persistent storage using Spring Data JPA. The responsive UI is styled with Bootstrap 5, providing a clean and user-friendly experience.</p>
               </div>
             </div>
           </div>
