--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 			            <h2>IT Engineer | System Engineer</h2>
 						<!-- <br> -->
 			            <p> 
-							<a href="https://github.com/Abhimanyusit" class="btn btn-primary py-3 px-4">Github</a></p>
+							<a href="https://github.com/Abhimanyusit" target="_blank" class="btn btn-primary py-3 px-4">Github</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -199,7 +199,7 @@
 													<span class="number" data-number="30">0</span> <span>+</span>
 													<span>&nbsp; Projects completed</span>
 												</p> -->
-												<p><a href="http://www.linkedin.com/in/abhimanyu-jha-204aab157" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+												<p><a href="http://www.linkedin.com/in/abhimanyu-jha-204aab157" target="_blank" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 											</div>
 										</div>
 									  </div>
@@ -217,11 +217,10 @@
 								<h2 class="mb-4">About Me</h2>
 								
 								<p>Results-driven Software Engineer with 2.6 years of experience in software development,
-									database management, and cloud technologies. Proficient in Java, Python, and PL/SQL, with
-									a strong ability to analyze and solve software engineering problems. Adept at designing,
-									developing, and optimizing software solutions while ensuring best practices and high
-									performance. Passionate about research, innovation, and team collaboration to drive efficient
-									software engineering solutions.
+database management, and cloud technologies. Proficient in Power BI, Excel, and Python
+for transforming raw data into actionable insights. Skilled at data visualization, dashboard
+development, and database management. Adept at collaborating with cross-functional teams
+to deliver data-driven solutions that improve decision-making and business performance.
 									</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering (I.T)</span></li>
@@ -346,11 +345,11 @@
 
 		<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/Abhimanyusit/Ecommerce-Sales-Dashboard.git" class="block-20 zoom-effect" style="background-image: url('images/Ecommerce\ Sales\ Dashboard.jpg');">
+              <a href="https://github.com/Abhimanyusit/Ecommerce-Sales-Dashboard.git" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/Ecommerce\ Sales\ Dashboard.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Abhimanyusit/Ecommerce-Sales-Dashboard.git">Power BI Sales dashboard Project</a></h3>
+                <h3 class="heading"><a href="https://github.com/Abhimanyusit/Ecommerce-Sales-Dashboard.git" target="_blank">Power BI Sales dashboard Project</a></h3>
                 <p>Designed a power bi dashboard for Ecommerce Store to track and analyze the online sales data acorss India.</p>
               </div>
             </div>
@@ -358,11 +357,11 @@
 
 		<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/Abhimanyusit/mini-python-code-editor.git" class="block-20 zoom-effect" style="background-image: url('images/code-compiler.png');">
+              <a href="https://github.com/Abhimanyusit/mini-python-code-editor.git" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/code-compiler.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Abhimanyusit/mini-python-code-editor.git">Mini Python Code Editor</a></h3>
+                <h3 class="heading"><a href="https://github.com/Abhimanyusit/mini-python-code-editor.git" target="_blank">Mini Python Code Editor</a></h3>
                 <p>A web-based mini Python code editor and runner. Write, edit, and execute Python code in your browser with real-time output, powered by Docker for secure code execution.</p>
               </div>
             </div>
@@ -370,11 +369,11 @@
 
 		  		<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/Abhimanyusit/todo_app.git" class="block-20 zoom-effect" style="background-image: url('images/todo_app.png');">
+              <a href="https://github.com/Abhimanyusit/todo_app.git" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/todo_app.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Abhimanyusit/todo_app.git">TO-DO APP</a></h3>
+                <h3 class="heading"><a href="https://github.com/Abhimanyusit/todo_app.git" target="_blank" >TO-DO APP</a></h3>
                 <p>A full-stack web application built with Spring Boot, Thymeleaf, and MySQL. Features include adding, completing, and deleting tasks with persistent storage using Spring Data JPA. The responsive UI is styled with Bootstrap 5, providing a clean and user-friendly experience.</p>
               </div>
             </div>
@@ -407,10 +406,10 @@
         <div class="social-media w-100 text-center">
           <h3>Follow Me</h3>
           <p class="d-flex justify-content-center">
-            <a href="http://www.linkedin.com/in/abhimanyu-jha-204aab157" class="btn btn-primary d-flex align-items-center justify-content-center mx-2">
+            <a href="http://www.linkedin.com/in/abhimanyu-jha-204aab157" target="_blank" class="btn btn-primary d-flex align-items-center justify-content-center mx-2">
               <span class="icon-linkedin"></span>
             </a>
-            <a href="https://github.com/Abhimanyusit" class="btn btn-dark d-flex align-items-center justify-content-center mx-2">
+            <a href="https://github.com/Abhimanyusit" target="_blank" class="btn btn-dark d-flex align-items-center justify-content-center mx-2">
               <span class="icon-github"></span>
             </a>
           </p>
