--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Abhimanyu Jha</span></h1>
-			            <h2>IT Engineer | System Engineer</h2>
+			            <h2>Software Engineer | Aspiring Data Analyst | Power BI, SQL & Python | Data Visualization</h2>
 						<!-- <br> -->
 			            <p> 
 							<a href="https://github.com/Abhimanyusit" target="_blank" class="btn btn-primary py-3 px-4">Github</a></p>
